# munshot_meetbot

./: .env.example  .gitguardian.yml  .gitignore  Makefile  PLAN.txt  PRODUCT_OVERVIEW.md  README.md  TEST_OWNER_EMAIL.md  VERSION  connect_calendar.py  implement-this.txt  migrate-docker.sh
.harness/: target.yaml
services/meeting-api/: README.md  pyproject.toml  requirements.txt
services/meeting-api/meeting_api/: batch_transcribe.py  callbacks.py  config.py  container_stop_outbox.py  database.py  dispatch_check.py  main.py  meetings.py  models.py  outbound_events.py  owners.py  post_meeting.py  recording_finalizer.py  recording_store.py  recordings.py  schemas.py  storage.py  sweeps.py  voice_agent.py  webhook_delivery.py  webhook_retry_worker.py  webhooks.py
services/meeting-api/meeting_api/collector/: config.py  d1_calendar_events_forwarder.py  d1_client.py  d1_forwarder.py  d1_meeting_forwarder.py  d1_owners_forwarder.py  d1_schedule_client.py  db_writer.py  endpoints.py
services/meeting-api/tests/: conftest.py  test_batch_speaker_attribution.py  test_batch_transcribe_claim.py  test_callbacks.py  test_create_bot_webhook_override.py  test_d1_meeting_mirror.py  test_d1_meeting_mirror_lifecycle.py  test_integration.py  test_meetings.py  test_platform_incident_regressions.py  test_post_meeting_idempotency.py  test_recording_media_content_type.py  test_recordings.py  test_recordings_concurrent_chunks.py  test_storage_bounded.py  test_sweeps_stopping.py  test_sweeps_unfinalized_recordings.py  test_url_parser_and_dry_run.py  test_voice_agent.py  test_webhooks.py
(+258 files in other folders)
