[project]
name = "meeting-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.8",
    "uvicorn[standard]>=0.39.0",
    "httpx>=0.27",
    "idna>=3.15",
    "redis>=5.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pydantic>=2.4.0",
    "pydantic[email]>=2.4.0",
    "alembic>=1.13",
    "python-multipart>=0.0.20",
    "boto3>=1.34",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
